# Copyright (c) The dgc.network
# SPDX-License-Identifier: Apache-2.0

[package]
name = "dgc-api"
version = "0.1.0"
authors = ["Contributors to Hyperledger Grid"]
edition = "2018"
license = "Apache-2.0"
description = """\
    Hyperledger Grid is a platform for building supply chain solutions. It \
    provides a growing set of tools that accelerate development for supply \
    chain smart contracts and client interfaces.
"""

[[bin]]
name = "dgc"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-rt = "1.0"
actix-web = "2.0"
sabre-sdk = "0.5"
sawtooth-sdk = "0.4"
grid-sdk = { path = "../sdk" }
serde = "1.0"
futures = "0.3"
url = "2.1"
diesel = "1.0.0"
base64 = "0.10"
protobuf = "2"
serde_json = "1.0"
validator = "0.10.0"
rust-crypto = "0.2"
